--- a/style.css
+++ b/style.css
@@ -1,53 +1,30 @@
-h1 {
-  padding-left: 10px;
+body {
+  background-color: white;
   font-family: Helvetica;
-  font-size: 25px
+  margin: 15% 15%; 
 }
 
-h4 {
-  padding-left: 10px;
-  font-family: Helvetica;
+.exp-header {
+  text-transform: uppercase;
+  border-top: 2px solid;
 }
 
-a {
-  padding-left: 10px;
-  font-family: Helvetica;
+
+ul {
+  padding-bottom: 5%;
+}
+
+
+img {
+  padding-bottom: 5%;
+  width: 450px;
+  height: 250px;
 }
 
 h2 {
-  margin-left: 10px;
-  font-family: Helvetica;
-  font-size: 18px;
-}
-
-p {
-  padding-left: 10px;
-  font-family: Helvetica;
-}
-
-li {
-  font-size: 13px; 
-  font-family: Helvetica;
-}
-
-h3 {
-  padding-left: 10px;
-  font-family: Helvetica;  
- }
-
-ul {
-  padding-bottom: 30px;
-}
-
-.footer {
-  padding-bottom: 100px;
-}
-
-img {
-  width: 350px;
-}
-
-a {
-  font-size: 15px;
-  color: blue;
+  font-size: 20px;
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
