--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
 .exp-header {
   text-transform: uppercase;
   border-top: 2px solid;
+  text-align: center;
 }
 
 
@@ -27,4 +28,5 @@ h2 {
   border-bottom: 2px solid;
   padding-top: 5px;
   padding-bottom: 5px;
+  text-align: center;
 }
