--- a/style.css
+++ b/style.css
@@ -32,8 +32,6 @@ a {
 
 h1 {
   text-align: left;
-  
-  
 }
 
 
@@ -54,6 +52,12 @@ h2 {
   border-radius: 15px 50px 30px 5px;
   animation-duration: 3s;
   animation-name: slidein;
+}
+
+
+h3 {
+  padding-top: 25px;
+  padding-bottom: 25px
 }
 
 
